--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
     }
    ],
    "source": [
-    "distance_all(fred, neighbors)\n",
+    "distance_all(fred, neighbors)[]\n",
     "math."
    ]
   },
